# DeskSprite

./: .gitignore  ISSUES.md  PROGRESS.md  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  remotion.config.ts  test.ipynb  tsconfig.app.json  vite.config.ts
dashboard/: index.html  package.json  vercel.json
docs/: agent-constraints.md  cloud-database-analytics.md  compact-chat-ime-handoff.md  model-config-debugging.md  tech-spec-v0.1.md  tech-spec-v0.2.md  voice-stt-tts-plan.md  windows-adaptation-test-plan.md  windows-porting-plan.md
electron/: codingStatus.cjs  codingStatus.test.cjs  main.cjs  panel-key-fix.mm  preload.cjs  secureKeyStore.cjs  secureKeyStore.test.cjs  welcomePermissionPrompt.cjs  welcomePermissionPrompt.test.cjs  windowLifecycle.cjs  windowLifecycle.test.cjs  windowsActivity.test.cjs  windowsProcesses.test.cjs
prd/: instructions.markdown  prd.markdown
remotion/: Cat15ProductVideo.tsx  CodexProductVideo.tsx  DeskCatPresentationFixtures.tsx  DeskCatProductVideo.tsx  Root.tsx
scripts/: build-deskcat-tts-preview.mjs  build-panel-key-fix.mjs  convert-remotion-gifs.mjs  generate-deskcat-audio.mjs  (+4 more)
src/: App.tsx  (+4 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_add_config_name_and_provider.sql  0003_add_api_key_to_configs.sql
src-tauri/src/: lib.rs
src-tauri/src/commands/: ai.rs  csp.rs  desktop.rs  images.rs  keychain.rs  mod.rs  screenshot.rs  tray.rs  window.rs
(+118 files in other folders)
