[package]
name = "desksprite"
version = "0.1.0"
description = "DeskSprite - AI Desktop Pet"
authors = ["pp"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-log = "2"

# DeskSprite P0 dependencies
keyring = "3"
base64 = "0.22"
image = "0.25"
reqwest = { version = "0.12", features = ["json", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"

[target.'cfg(target_os = "macos")'.dependencies]
xcap = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
screenshots = "0.8"
